force-app/main/default/objects/ssot__AiAgentTagDefinition__dlm/fields/KQ_Id__c.field-meta.xml
<CustomField>
    <fullName>KQ_Id__c</fullName>
    <label>Key Qualifier AI Agent Tag Definition Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Tag Definition Id</labelOverride>
        <masterLabel>Key Qualifier AI Agent Tag Definition Id</masterLabel>
        <refAttrDeveloperName>KQ_Id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>