force-app/main/default/objects/ssot__AiAgentTagDefinition__dlm/fields/LightningTypeApiName__c.field-meta.xml
<CustomField>
    <fullName>LightningTypeApiName__c</fullName>
    <label>Lightning Type Api Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Lightning Type Api Name</labelOverride>
        <masterLabel>Lightning Type Api Name</masterLabel>
        <refAttrDeveloperName>LightningTypeApiName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>