force-app/main/default/objects/ssot__AiAgentTagDefinition__dlm/fields/SemanticType__c.field-meta.xml
<CustomField>
    <fullName>SemanticType__c</fullName>
    <label>Semantic Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Semantic Type</labelOverride>
        <masterLabel>Semantic Type</masterLabel>
        <refAttrDeveloperName>SemanticType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>